[package]
name = "rfc1055"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "1.0.0"

# rfc1055-cli dependencies
[dependencies.clap]
version = "3.2.17"
optional = true
features = ["cargo"]

[features]
build-binary = ["clap"]

[[bin]]
name = "rfc1055-cli"
required-features = ["build-binary"]
