[package]
name = "rfc1055"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "1.0.0"

# optional smoltcp dependency
[dependencies.smoltcp]
version = ">=0.8.0"
default_features = false
features = ["medium-ethernet","proto-ipv4","socket-tcp"]
optional = true

# optional crc dependency
[dependencies.crc]
version = ">=3.0.0"
optional = true

# rfc1055-cli dependencies
[dependencies.clap]
version = "3.2.17"
optional = true
features = ["cargo"]

[features]
network-interface = ["smoltcp", "crc"]
build-binary = ["clap"]

[[bin]]
name = "rfc1055-cli"
required-features = ["build-binary"]
